feat: add decoration

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<p>Recipe ritual of summoning</p>
 						</div>
 						<div class="cv-content">
-							<p>mail: <a href="apotinvs@gmail.com">apotinvs@gmail.com</a></p>
+							<p>mail: <a href="apotinvs@gmail.com" class="mail">apotinvs@gmail.com</a></p>
 							<p>tel: KZ +7 705 587 88 78</p>
 						</div>
 					</li>
