--- a/webdev/index.html
+++ b/webdev/index.html
@@ -19,7 +19,7 @@
 							<a href="#">Syllabus</a>
 						</li>
 						<li class="menu-item__logo"> 
-							<a href="#"><img src="../webdew/assets/logo.png" alt=""></a>
+							<a href="#"><img src="../webdev/assets/logo.png" alt=""></a>
 						</li>
 						<li class="menu-item">
 							<a href="#">Projects</a>
@@ -41,10 +41,10 @@
 				</div>
 		</div>
 		<div class="your-life__icons">
-			<a href="#" class="your-life__icons-item"><img src="../webdew/assets/mail_fff.svg" alt=""></a>
-			<a href="#" class="your-life__icons-item"><img src="../webdew/assets/facebook_fff.svg" alt=""></a>
-			<a href="#" class="your-life__icons-item"><img src="../webdew/assets/insta_fff.svg" alt=""></a>
-			<a href="#" class="your-life__icons-item"><img src="../webdew/assets/telegram_fff.svg" alt=""></a>
+			<a href="#" class="your-life__icons-item"><img src="../webdev/assets/mail_fff.svg" alt=""></a>
+			<a href="#" class="your-life__icons-item"><img src="../webdev/assets/facebook_fff.svg" alt=""></a>
+			<a href="#" class="your-life__icons-item"><img src="../webdev/assets/insta_fff.svg" alt=""></a>
+			<a href="#" class="your-life__icons-item"><img src="../webdev/assets/telegram_fff.svg" alt=""></a>
 		</div>
 	</div>
 	<div class="rappresent-idea">
@@ -59,7 +59,7 @@
 				<a href="#">get started</a>
 			</div>
 		</div>
-		<div class="rappresent-idea__image"><img src="../webdew/assets/content-image-1.jpg" alt=""></div>
+		<div class="rappresent-idea__image"><img src="../webdev/assets/content-image-1.jpg" alt=""></div>
 	</div>
 	<div class="our-community">
 		<div class="our-community__slider-counter">
@@ -69,7 +69,7 @@
 			<a href="#" class="right">&gt;</a>
 		</div>
 		<div class="our-community__content">
-			<div class="our-community__content-ico"><img src="../webdew/assets/icon.png" alt=""></div>
+			<div class="our-community__content-ico"><img src="../webdev/assets/icon.png" alt=""></div>
 			<h3>our community</h3>
 			<p>A hacker is any skilled computer expert that
 				uses their technical knowledge to overcome 
@@ -77,13 +77,13 @@
 				hacker in common language</p>
 		</div>
 		<div class="our-community__slider">
-			<div class="our-community__slider-item"><img src="../webdew/assets/Rectangle 2 (2).jpg" alt=""></div>
-			<div class="our-community__slider-item"><img src="../webdew/assets/Rectangle 2 (1).jpg" alt=""></div>
-			<div class="our-community__slider-item"><img src="../webdew/assets/Rectangle 2.png" alt=""></div>			
+			<div class="our-community__slider-item"><img src="../webdev/assets/Rectangle 2 (2).jpg" alt=""></div>
+			<div class="our-community__slider-item"><img src="../webdev/assets/Rectangle 2 (1).jpg" alt=""></div>
+			<div class="our-community__slider-item"><img src="../webdev/assets/Rectangle 2.png" alt=""></div>			
 		</div>
 	</div>
 	<div class="implement-code">
-		<div class="implement-code__image"><img src="../webdew/assets/content-image-1.jpg" alt=""></div>
+		<div class="implement-code__image"><img src="../webdev/assets/content-image-1.jpg" alt=""></div>
 		<div class="implement-code__content">
 			<h2>Implement right Code</h2>
 			<p>These might be considered part of the <span>programming process</span>, 
@@ -101,7 +101,7 @@
 			<div class="newsletter__form-form"></div>
 				<input type="email" class="newsletter__form-input" placeholder="E-mail" >
 				<input type="submit" class="newsletter__form-button" value="">
-				<img src="../webdew/assets/fa-check.png" class="newsletter__form-form-check" alt="">			
+				<img src="../webdev/assets/fa-check.png" class="newsletter__form-form-check" alt="">			
 			</div>		
 		</div>
 	</div>
